--- a/package.json
+++ b/package.json
@@ -1,7 +1,19 @@
 {
+  "name": "crud-serverless-aws",
+  "version": "1.1.0",
+  "description": "CRUD using Serverless DB - AWS",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "Raja Partogi O. R.",
+  "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.142.0",
-    "@aws-sdk/util-dynamodb": "^3.0.0",
+    "@aws-sdk/util-dynamodb": "^3.18.0"
+  },
+  "devDependencies": {
     "serverless-iam-roles-per-function": "^3.2.0"
   }
 }
