--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.142.0",
-    "@aws-sdk/util-dynamodb": "^3.18.0"
+    "@aws-sdk/util-dynamodb": "^3.18.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "serverless-iam-roles-per-function": "^3.2.0"
